added message about cvs, fixed compiler options
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194579 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -184,8 +184,8 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
 
     <property name="build.compiler" value="classic"/>
     <property name="debug" value="on"/>
-    <property name="optimize" value="on"/>
-    <property name="deprecation" value="on"/>
+    <property name="optimize" value="off"/>
+    <property name="deprecation" value="off"/>
 
     <property name="src.dir" value="./src"/>
     <property name="src.codegen" value="./src/codegen"/>
