--- a/build.xml
+++ b/build.xml
@@ -138,7 +138,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
        <include name="lib/xalan.LICENSE.txt"/>
        <include name="lib/batik.jar"/>
        <include name="lib/batik.LICENSE.txt"/>
-       <include name="lib/logkit-1.0b4.jar"/>
+       <include name="lib/logkit-1.0.jar"/>
        <include name="lib/logkit.LICENSE.txt"/>
        <include name="lib/avalon-framework-4.0.jar"/>
        <include name="lib/avalon.LICENSE.txt"/>
@@ -275,7 +275,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <taskdef name="runTest" classname="org.apache.fop.tools.anttasks.RunTest"/>
 
     <property name="main.class" value="org.apache.fop.apps.Fop"/>
-    <property name="runtime.classpath" value="lib/xerces-1.2.3.jar lib/xalan-2.0.0.jar lib/xalanj1compat.jar lib/batik.jar lib/jimi-1.0.jar lib/logkit-1.0b4.jar lib/avalon-framework-4.0.jar"/>
+    <property name="runtime.classpath" value="lib/xerces-1.2.3.jar lib/xalan-2.0.0.jar lib/xalanj1compat.jar lib/batik.jar lib/jimi-1.0.jar lib/logkit-1.0.jar lib/avalon-framework-4.0.jar"/>
    
     <filter filtersfile="${build.src}/codegen/filter"/>
 
