--- a/build.xml
+++ b/build.xml
@@ -165,6 +165,14 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
        <include name="fop.sh"/>
     </fileset>
 
+  <path id="libs-build-classpath">
+    <fileset dir="lib">
+      <include name="stylebook*.jar"/>
+      <include name="xalan*.jar"/>
+      <include name="xerces*.jar"/>
+    </fileset>
+  </path>
+
   <!-- =================================================================== -->
   <!-- Initialization target                                               -->
   <!-- =================================================================== -->
@@ -193,6 +201,9 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <property name="conf.dir" value="./conf"/>
     <property name="packages" value="org.apache.fop.*"/>
 
+    <property name="docs"           value="docs/html-docs"/>
+    <property name="xdocs"           value="docs/xml-docs"/>
+    <property name="skins"           value="docs/xml-docs/skins/xml.apache.org/"/>
     <property name="doc.generator" value="org.apache.stylebook.StyleBook"/>
     <property name="doc.generator.package" value="${lib.dir}/stylebook-1.0-b2.jar"/>
 
@@ -639,6 +650,21 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
              bottom="Copyright &#169; ${year} Apache Software Foundation. All Rights Reserved."
     />
   </target>
+
+  <target name="htmldoc" depends="prepare-src">
+    <copy file="${xdocs}/fop.xml"
+          tofile="${xdocs}/book.xml"
+          filtering="on"/>
+    <java classname="${doc.generator}" fork="yes">
+      <classpath refid="libs-build-classpath"/>
+      <arg line="targetDirectory=${docs} ${xdocs}/book.xml ${skins}"/>
+    </java>
+    <java classname="${doc.generator}" fork="yes">
+      <classpath refid="libs-build-classpath"/>
+      <arg line="targetDirectory=${docs}/design/ docs/design/book.xml ${skins}"/>
+    </java>
+  </target>
+
 
   <!-- =================================================================== -->
   <!-- Creates the distribution                                            -->
