Updated ant to version 1.4.1
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194729 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -141,7 +141,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
        <include name="lib/batik.LICENSE.txt"/>
        <include name="lib/avalon-framework-cvs-20020315.jar"/>
        <include name="lib/avalon.LICENSE.txt"/>
-       <include name="lib/ant.jar"/>
+       <include name="lib/ant-1.4.1.jar"/>
        <include name="lib/ant.license.txt"/>
     </fileset>
 
